# kachesim

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
devel/: CMakeLists.txt  main.cc
include/kachesim/: cache_block.h  cache_interface.h  cache_set.h  data_storage.h  data_storage_transaction.h  fake_memory.h  kachesim.h  memory_hierarchy.h  memory_interface.h  set_associative_cache.h
include/kachesim/doubly_linked_list/: doubly_linked_list.h
include/kachesim/replacement_policy/: least_recently_used.h
src/: CMakeLists.txt  cache_block.cc  cache_block.h  cache_entry.h  cache_interface.cc  cache_interface.h  cache_line.cc  cache_line.h  cache_set.cc  cache_set.h  common.cc  common.h  data.cc  data.h  data_storage.cc  data_storage.h  data_storage_transaction.cc  data_storage_transaction.h  fake_memory.cc  fake_memory.h  kachesim.h  least_recently_used.cc  least_recently_used.h  memory_hierarchy.cc  memory_hierarchy.h  memory_interface.cc  memory_interface.h  replacement_policy.cc  replacement_policy.h  set_associative_cache.cc  set_associative_cache.h
src/doubly_linked_list/: doubly_linked_list.cc  doubly_linked_list.h
src/replacement_policy/: least_recently_used.cc  least_recently_used.h  replacement_policy.cc  replacement_policy.h
tests/: CMakeLists.txt  test_cache_block.cc  test_cache_entry.cc  test_cache_line.cc  test_cache_set.cc  test_data.cc  test_data_storage_transaction.cc  test_doubly_linked_list.cc  test_fake_memory.cc  test_least_recently_used.cc  test_memory_hierarchy.cc  test_set_associative_cache.cc
tests/data/: bin_data0.mem  hex_data0.mem  memory_hierarchy0.yaml
